--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.10.17",
     "@prisma/client": "^4.7.1",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   },
